fixed whitespace and filtering of offers

--- a/src/components/popup-components/DetailPopup-Style.css
+++ b/src/components/popup-components/DetailPopup-Style.css
@@ -108,6 +108,7 @@
   width: 100%;
   min-height: 80px;
   margin-bottom: 10px;
+  white-space: pre-wrap;
 }
 
 .dp-wrapper__downinfo--ap {
